Refactor equation term operations (#406)
Signed-off-by: Geoffroy Jamgotchian <geoffroy.jamgotchian@gmail.com>